[package]
name = "ncv-cli"
version = "0.1.0"
authors = ["Yū Kobayashi <kb10uy@kb10uy.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.neocuviz]
path = "../neocuviz"

[dependencies.clap]
version = "3.0.0-beta.1"

[dependencies.image]
version = "0.23"

[dependencies.resvg]
version = "0.11"

[dependencies.usvg]
version = "0.11"
